--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@openclaw-memory/client": "workspace:*",
+    "axios": "^1.6.5",
     "commander": "^11.0.0",
     "chalk": "^5.3.0",
     "table": "^6.8.1"
