--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -16,8 +16,7 @@
     "@mui/material": "^6.0.0",
     "@mui/icons-material": "^6.0.0",
     "@emotion/react": "^11.11.1",
-    "@emotion/styled": "^11.11.0",
-    "axios": "^1.6.5"
+    "@emotion/styled": "^11.11.0"
   },
   "devDependencies": {
     "@types/node": "^20",
