Add comprehensive SKILL.md for OpenClaw integration - complete engineer instructions

--- a/.env.example
+++ b/.env.example
@@ -2,10 +2,15 @@
 MONGODB_URI=mongodb+srv://user:password@cluster.mongodb.net/openclaw_memory
 
 # Voyage AI Embeddings
-VOYAGE_API_KEY=pa-...
+VOYAGE_API_KEY=pa-YOUR_KEY_HERE
+VOYAGE_MOCK=true                   # true for mock (default), false for real embeddings
+# VOYAGE_BASE_URL=                 # Leave empty for voyageai.com, or set for Atlas AI
+# VOYAGE_MODEL=voyage-3            # Override default model
 
 # Memory Daemon
-MEMORY_DAEMON_PORT=7654
+MEMORY_DAEMON_PORT=7751
+# MEMORY_DB_NAME=openclaw_memory   # Override database name
+# MEMORY_API_KEY=your-secret-key   # Set to enable API key auth on all endpoints
 
 # Web Dashboard (Next.js)
-NEXT_PUBLIC_DAEMON_URL=http://localhost:7654
+NEXT_PUBLIC_DAEMON_URL=http://localhost:7751
