--- a/packages/daemon/package.json
+++ b/packages/daemon/package.json
@@ -11,13 +11,15 @@
     "test": "vitest"
   },
   "dependencies": {
+    "axios": "^1.6.5",
+    "cors": "^2.8.6",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "mongodb": "^6.5.0",
-    "axios": "^1.6.5",
-    "dotenv": "^16.3.1",
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.19",
     "@types/express": "^4.17.21",
     "tsx": "^4.7.0",
     "typescript": "^5.3",
