--- a/packages/daemon/tsconfig.json
+++ b/packages/daemon/tsconfig.json
@@ -2,7 +2,10 @@
   "extends": "../../tsconfig.json",
   "compilerOptions": {
     "outDir": "./dist",
-    "rootDir": "./src"
+    "rootDir": "./src",
+    "module": "commonjs",
+    "moduleResolution": "node",
+    "noEmit": false
   },
   "include": ["src"],
   "exclude": ["node_modules", "dist"]
