--- a/package.json
+++ b/package.json
@@ -15,5 +15,11 @@
   "devDependencies": {
     "@types/node": "^20",
     "typescript": "^5.3"
+  },
+  "pnpm": {
+    "overrides": {
+      "@types/react": "^19.0.0",
+      "@types/react-dom": "^19.0.0"
+    }
   }
 }
