--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -10,20 +10,46 @@
     "export": "next export"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@leafygreen-ui/badge": "^10.2.4",
+    "@leafygreen-ui/banner": "^10.2.5",
+    "@leafygreen-ui/button": "^25.2.1",
+    "@leafygreen-ui/card": "^13.3.1",
+    "@leafygreen-ui/chip": "^4.2.1",
+    "@leafygreen-ui/confirmation-modal": "^11.0.1",
+    "@leafygreen-ui/expandable-card": "^5.2.4",
+    "@leafygreen-ui/icon": "^14.8.0",
+    "@leafygreen-ui/icon-button": "^17.1.5",
+    "@leafygreen-ui/leafygreen-provider": "^5.0.4",
+    "@leafygreen-ui/loading-indicator": "^5.1.1",
+    "@leafygreen-ui/modal": "^22.0.1",
+    "@leafygreen-ui/pagination": "^4.3.1",
+    "@leafygreen-ui/palette": "^5.0.2",
+    "@leafygreen-ui/search-input": "^6.1.3",
+    "@leafygreen-ui/select": "^17.0.3",
+    "@leafygreen-ui/side-nav": "^17.0.12",
+    "@leafygreen-ui/table": "^15.2.3",
+    "@leafygreen-ui/text-area": "^12.1.5",
+    "@leafygreen-ui/text-input": "^16.2.3",
+    "@leafygreen-ui/toast": "^8.1.3",
+    "@leafygreen-ui/toggle": "^12.1.5",
+    "@leafygreen-ui/tokens": "^4.2.2",
+    "@leafygreen-ui/tooltip": "^14.3.1",
+    "@leafygreen-ui/typography": "^22.2.4",
+    "@mui/icons-material": "^7.3.8",
+    "@mui/material": "^7.3.8",
+    "lucide-react": "^0.575.0",
     "next": "^15.0.0",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "@mui/material": "^6.0.0",
-    "@mui/icons-material": "^6.0.0",
-    "@emotion/react": "^11.11.1",
-    "@emotion/styled": "^11.11.0"
+    "react-dom": "^19.0.0"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "typescript": "^5.3",
     "eslint": "^8.54.0",
-    "eslint-config-next": "^15.0.0"
+    "eslint-config-next": "^15.0.0",
+    "typescript": "^5.3"
   }
 }
