--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@openclaw-memory/web",
   "version": "0.1.0",
-  "description": "Next.js + Material UI dashboard for openclaw-memory",
+  "description": "Next.js + LeafyGreen UI dashboard for openclaw-memory",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -10,8 +10,6 @@
     "export": "next export"
   },
   "dependencies": {
-    "@emotion/react": "^11.11.1",
-    "@emotion/styled": "^11.11.0",
     "@leafygreen-ui/badge": "^10.2.4",
     "@leafygreen-ui/banner": "^10.2.5",
     "@leafygreen-ui/button": "^25.2.1",
@@ -37,8 +35,6 @@
     "@leafygreen-ui/tokens": "^4.2.2",
     "@leafygreen-ui/tooltip": "^14.3.1",
     "@leafygreen-ui/typography": "^22.2.4",
-    "@mui/icons-material": "^7.3.8",
-    "@mui/material": "^7.3.8",
     "lucide-react": "^0.575.0",
     "next": "^15.0.0",
     "react": "^19.0.0",
