--- a/packages/daemon/package.json
+++ b/packages/daemon/package.json
@@ -24,6 +24,7 @@
     "@types/express": "^4.17.21",
     "@types/node": "^20.19.33",
     "@types/supertest": "^6.0.3",
+    "@vitest/coverage-v8": "^4.0.18",
     "@vitest/ui": "^4.0.18",
     "mongodb-memory-server": "^11.0.1",
     "supertest": "^7.2.2",
