--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -35,12 +35,14 @@
     "@leafygreen-ui/tokens": "^4.2.2",
     "@leafygreen-ui/tooltip": "^14.3.1",
     "@leafygreen-ui/typography": "^22.2.4",
+    "d3-cloud": "^1.2.8",
     "lucide-react": "^0.575.0",
     "next": "^15.0.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
   "devDependencies": {
+    "@types/d3-cloud": "^1.2.9",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
