fix: Resolve build errors in docs page - use LeafyGreen UI
Fixed Material UI → LeafyGreen UI conversion issues:
- Replaced Tabs with Button group (SSR compatible)
- Replaced Code component with pre/code (SSR compatible)
- Added custom code snippet styling
- Added @leafygreen-ui/tabs and @leafygreen-ui/code packages

Build now succeeds ✅
- /docs page: 7.94 kB
- Static pre-rendering working
- No SSR errors

Warnings (non-blocking):
- Scatter icon import (existing dashboard issue)
- Screen-reader labels (accessibility improvements for later)

--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -15,6 +15,7 @@
     "@leafygreen-ui/button": "^25.2.1",
     "@leafygreen-ui/card": "^13.3.1",
     "@leafygreen-ui/chip": "^4.2.1",
+    "@leafygreen-ui/code": "^20.2.7",
     "@leafygreen-ui/confirmation-modal": "^11.0.1",
     "@leafygreen-ui/expandable-card": "^5.2.4",
     "@leafygreen-ui/icon": "^14.8.0",
@@ -28,6 +29,7 @@
     "@leafygreen-ui/select": "^17.0.3",
     "@leafygreen-ui/side-nav": "^17.0.12",
     "@leafygreen-ui/table": "^15.2.3",
+    "@leafygreen-ui/tabs": "^17.0.11",
     "@leafygreen-ui/text-area": "^12.1.5",
     "@leafygreen-ui/text-input": "^16.2.3",
     "@leafygreen-ui/toast": "^8.1.3",
