feat: Prepare v0.2.0 for NPM publishing
Week 2 Day 1-2: Package & Distribute

- Add MIT LICENSE
- Update all package.json files to v0.2.0 with full metadata
  - Repository, keywords, author, bugs, homepage
  - Files whitelist (exclude tests from published packages)
- Create NPM_PUBLISHING.md guide (comprehensive 60-min workflow)
- Update PRODUCT_PLAN.md to mark Week 1 COMPLETE ✅
- Build all packages (daemon, client, cli) successfully

Ready for npm publish --dry-run testing.

--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -1,13 +1,38 @@
 {
   "name": "@openclaw-memory/client",
-  "version": "0.1.0",
-  "description": "Client library for OpenClaw memory daemon",
+  "version": "0.2.0",
+  "description": "TypeScript client library for OpenClaw memory daemon - semantic memory with MongoDB and Voyage AI",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
+  "files": [
+    "dist",
+    "README.md"
+  ],
   "scripts": {
     "build": "tsc",
     "test": "vitest"
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/mrlynn/openclaw-mongodb-memory.git",
+    "directory": "packages/client"
+  },
+  "keywords": [
+    "openclaw",
+    "memory",
+    "client",
+    "sdk",
+    "mongodb",
+    "voyage-ai",
+    "semantic-search",
+    "ai-agent"
+  ],
+  "author": "Michael Lynn <michael.lynn@mongodb.com>",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/mrlynn/openclaw-mongodb-memory/issues"
+  },
+  "homepage": "https://github.com/mrlynn/openclaw-mongodb-memory#readme",
   "dependencies": {
     "axios": "^1.6.5",
     "zod": "^3.22.4"
