--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -1,19 +1,44 @@
 {
   "name": "@openclaw-memory/cli",
-  "version": "0.1.0",
-  "description": "CLI for managing OpenClaw memory daemon",
+  "version": "0.2.0",
+  "description": "Command-line interface for managing OpenClaw memory daemon (ocmem)",
   "main": "dist/index.js",
   "bin": {
     "ocmem": "dist/index.js"
   },
+  "files": [
+    "dist",
+    "README.md"
+  ],
   "scripts": {
     "dev": "tsx watch src/index.ts",
     "build": "tsc",
     "start": "node dist/index.js",
     "test": "vitest"
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/mrlynn/openclaw-mongodb-memory.git",
+    "directory": "packages/cli"
+  },
+  "keywords": [
+    "openclaw",
+    "memory",
+    "cli",
+    "mongodb",
+    "voyage-ai",
+    "semantic-search",
+    "ai-agent",
+    "management"
+  ],
+  "author": "Michael Lynn <michael.lynn@mongodb.com>",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/mrlynn/openclaw-mongodb-memory/issues"
+  },
+  "homepage": "https://github.com/mrlynn/openclaw-mongodb-memory#readme",
   "dependencies": {
-    "@openclaw-memory/client": "workspace:*",
+    "@openclaw-memory/client": "^0.2.0",
     "axios": "^1.6.5",
     "commander": "^11.0.0",
     "chalk": "^5.3.0",
