--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -41,7 +41,9 @@
     "lucide-react": "^0.575.0",
     "next": "^15.0.0",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-markdown": "^10.1.0",
+    "remark-gfm": "^4.0.1"
   },
   "devDependencies": {
     "@types/d3-cloud": "^1.2.9",
