scripts to publish

--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "format": "prettier --write \"packages/*/src/**/*.{ts,tsx}\"",
     "format:check": "prettier --check \"packages/*/src/**/*.{ts,tsx}\"",
     "typecheck": "pnpm -r exec tsc --noEmit",
+    "publish:dry": "bash scripts/publish.sh",
+    "publish:run": "bash scripts/publish.sh --run",
+    "publish:canary": "bash scripts/publish.sh --canary --run",
     "clean": "pnpm -r exec rm -rf dist .next out node_modules/.cache",
     "version:patch": "pnpm -r exec npm version patch --no-git-tag-version && npm version patch --no-git-tag-version",
     "version:minor": "pnpm -r exec npm version minor --no-git-tag-version && npm version minor --no-git-tag-version",
