--- a/.env.example
+++ b/.env.example
@@ -34,6 +34,16 @@ VOYAGE_MOCK=true
 # When set, all requests (except /health) must include X-API-Key header.
 # MEMORY_API_KEY=
 
+# --- Memory File ---
+# Path to a MEMORY.md file for text-file memory comparison on the dashboard.
+# Tilde (~) paths are expanded automatically.
+# MEMORY_FILE_PATH=~/.openclaw/workspace/MEMORY.md
+
+# --- Plugin ---
+# Override the daemon directory for OpenClaw plugin auto-start.
+# Defaults to resolving relative to the plugin's own location.
+# OPENCLAW_MEMORY_DAEMON_DIR=~/code/openclaw-memory/packages/daemon
+
 # --- Web Dashboard ---
 # URL where the daemon is running (used by Next.js web UI)
 NEXT_PUBLIC_DAEMON_URL=http://localhost:7654
