feat: Add tool-result-capture hook for automatic action-based memory
- New hook captures significant tool executions (edits, execs, searches)
- Configurable thresholds: all, significant (default), minimal
- Smart filtering: skips trivial reads, captures problem-solving patterns
- Fire-and-forget async storage (doesn't block tools)
- Comprehensive AUTO_CAPTURE.md guide for users
- Solves the 'agent forgot to save' problem with passive capture

Why: Manual memory_remember() is error-prone and depends on agent
discipline. This makes memory capture automatic and reliable.

--- a/plugin/package.json
+++ b/plugin/package.json
@@ -18,6 +18,7 @@
     "hooks": [
       "./hooks/auto-remember",
       "./hooks/session-to-memory",
+      "./hooks/tool-result-capture",
       "./hooks/memory-bootstrap",
       "./hooks/memory-enriched-tools"
     ]
